kubernetes/apps/observability/victoria-logs/app/syslog-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: victoria-logs-syslog
  annotations:
    lbipam.cilium.io/ips: "10.10.1.115"
spec:
  type: LoadBalancer
  allocateLoadBalancerNodePorts: false
  externalTrafficPolicy: Local
  loadBalancerSourceRanges:
    - 10.10.1.1/32
  selector:
    app.kubernetes.io/instance: victoria-logs
    app.kubernetes.io/name: victoria-logs-single
    app: server
  ports:
    - name: syslog-udp
      port: 5514
      protocol: UDP
      targetPort: 5514
